<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/termListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1D9D9">

    <TextView
        android:id="@+id/termItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/season_year"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageCourseListItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/termItemStartDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/start_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageCourseListItem"
        app:layout_constraintTop_toBottomOf="@+id/termItemTitle" />

    <TextView
        android:id="@+id/termItemStartDateTextDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="YEAR-MM-DD"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/termItemStartDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/termItemTitle" />

    <TextView
        android:id="@+id/termItemEndDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/end_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/termItemStartDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/termItemStartDateLabel" />

    <TextView
        android:id="@+id/termItemEndDateTextDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="YEAR-MM-DD"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/termItemEndDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/termItemStartDateTextDynamic" />

    <ImageView
        android:id="@+id/imageCourseListItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_view_module_24" />


</androidx.constraintlayout.widget.ConstraintLayout>