<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/termListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1D9D9">

    <TextView
        android:id="@+id/courseItemTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/course_label"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageCourseListItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseItemStartDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/start_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageCourseListItem"
        app:layout_constraintTop_toBottomOf="@+id/courseItemTitleLabel" />

    <TextView
        android:id="@+id/courseItemStartDateDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="YEAR-MM-DD"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/courseItemStartDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/courseItemTitleLabel" />

    <TextView
        android:id="@+id/courseItemEndDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/end_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/courseItemStartDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/courseItemStartDateLabel" />

    <TextView
        android:id="@+id/courseItemEndDateDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="YEAR-MM-DD"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/courseItemEndDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/courseItemStartDateDynamic" />

    <TextView
        android:id="@+id/courseItemStatusDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="STATUS"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/courseItemEndDateDynamic"
        app:layout_constraintTop_toBottomOf="@+id/courseItemStartDateDynamic" />

    <ImageView
        android:id="@+id/imageCourseListItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_view_list_24" />

    <TextView
        android:id="@+id/courseItemTitleDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/courseItemTitleLabel"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>